test/files/neg/macro-invalidsig-implicit-params.check
Impls_Macros_1.scala:18: error: macro implementations cannot have implicit parameters other than WeakTypeTag evidences
  def foo_targs[U](x: Int) = macro Impls.foo_targs[T, U]
                                         ^
one error found
